test/org/midica/testfiles/failing/instruments-elem-not-enough-args.midica
INCLUDE inc/instruments.midica

INSTRUMENTS
	0 5
END
